# grayscale-fastapi

./: README.md  database.py  endpoint.py  main.py  model.py  pyproject.toml  utils.py
static/: style.css
templates/: index.html
